--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "nodemon app.js"
+    "test": "vitest",
+    "start:dev": "nodemon server.js",
+    "start:prod": "node server.js"
   },
   "author": "",
   "license": "ISC",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.4",
+    "supertest": "^7.0.0",
     "vitest": "^1.6.0"
   }
 }
