--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.4",
+    "sinon": "^18.0.0",
     "supertest": "^7.0.0",
     "vitest": "^1.6.0"
   }
